--- a/userguide/csaw.Rnw
+++ b/userguide/csaw.Rnw
@@ -50,7 +50,7 @@
 % Set to change date for document, not compile date.
 \date{First edition 15 August 2012\\
 \vspace{6pt}
-Last revised 11 February 2015}
+Last revised 21 February 2015}
 
 % Removing the bibliography title so it shows up in the contents.
 \makeatletter
@@ -1564,6 +1564,7 @@ keep <- filter.stat$filter > log2(3)
 % If you have a large bin, you get a precise estimate of the background rate, so you don't need a prior when computing the log-fold increase.
 % You'll still be susceptible when the background is completely empty; but in that case, there's probably nothing there, so the true fold change may actually be ~Inf.
 % If you have a small bin, the number of background reads fluctuates by sampling, so you need a large prior to avoid selecting for regions with randomly low background.
+% This is actually the case here; if you look for things that are kept with prior.count=2, you'll find a lot of things with low counts in the ChIP sample.
 
 The \pkgname{} pipeline can also be applied to search for ``DB'' between ChIP libraries and control libraries. 
 The ChIP and control libraries can be treated as separate groups, in which most ``DB'' events are expected to be enriched in the ChIP samples. 
