Cleared out old picture directory in new runs.
git-svn-id: https://svn.wehi.edu.au/svn/repos/SmythLab/ALun/csaw@2356 3f7291af-367f-0410-92d8-b778034d9185

--- a/userguide/csaw.Rnw
+++ b/userguide/csaw.Rnw
@@ -81,7 +81,9 @@ Last revised 21 February 2015}
 \tableofcontents
 
 <<results=hide,echo=FALSE>>=
-dir.create("plots-ug")
+picdir <- "plots-ug"
+if (file.exists(picdir)) { unlink(picdir, recursive=TRUE) }
+dir.create(picdir)
 @
 
 \newpage
